--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "csv-parse": "^5.5.6",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0",
     "xlsx": "^0.18.5",
     "zod": "^4.1.13"
   },
@@ -32,6 +36,8 @@
     "@types/express": "^5.0.5",
     "@types/multer": "^1.4.13",
     "@types/node": "^24.10.1",
+    "@types/uuid": "^9.0.7",
+    "@types/validator": "^13.11.7",
     "prisma": "^5.19.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
